gitops/observability/raw/01-otel-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-nodeport
  namespace: monitoring
  labels:
    app: otel-collector-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: opentelemetry-collector
  ports:
    - name: otlp-grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
      nodePort: 30317
    - name: otlp-http
      protocol: TCP
      port: 4318
      targetPort: 4318
      nodePort: 30318
