gitops/observability/raw/04-ingress-jaeger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-jaeger-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /jaeger
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
