gitops/observability/raw/05-ingress-otel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-collector-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, traceparent, tracestate"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /otel(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: otel-collector-opentelemetry-collector
                port:
                  number: 4318
